--- a/src/components/ListItem/listItem.module.css
+++ b/src/components/ListItem/listItem.module.css
@@ -10,7 +10,7 @@
 }
 
 .item.skeleton {
-   box-shadow: none;
+   box-shadow: 0 2px 8px hsl(0deg 0% 1% / 1%), 0 0 0 1px hsl(0deg 0% 1% / 1%);
 }
 
 @media(max-width:1024px) {
